--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build & node ./graphql-server/index.js",
     "lint": "vue-cli-service lint",
     "dev": "vue-cli-service serve & node ./graphql-server/index.js"
   },
